force-app/main/default/objects/AccountTeamMember__c/AccountTeamMember__c.object-meta.xml
<CustomObject>
    <label>AccountTeamMember</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>AccountTeamMember Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AccountTeamMembers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>