force-app/main/default/objects/AccountTeamMember__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AccountTeamMembers</relationshipLabel>
    <relationshipName>AccountTeamMembers</relationshipName>
    <type>Lookup</type>
</CustomField>